fix: featured collection mobile columns not applying

--- a/themes/bella/styles/section.featured-collection.scss
+++ b/themes/bella/styles/section.featured-collection.scss
@@ -127,6 +127,14 @@
 
     @media (width <= 769px) {
       gap: var(--spacing-48);
+
+      .core-area {
+        &:not(:has([ui-block="content"])) {
+          [ui-block="products"] {
+            grid-template-columns: repeat(attr(data-nbr-columns-mobile number), 1fr);
+          }
+        }
+      }
     }
   }
 }
